<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">智能门锁</string>
    <string name="Sign_out">"程序后台运行中\n断开连接后退出"</string>
    <string name="device">Device:</string>
    <string name="no_device">没有找到任何设备，请重试！</string>
    <string name="select_device">请选择一个设备</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">扫描中...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">断开</string>
    <string name="connect">连接</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">扫描</string>
    <string name="cancel">取消</string>
    <string name="about_smart_lock">关于智能门锁</string>
    <string name="connect_bluetooth">连接设备</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bluetooth_close">" 蓝牙：未打开"</string>
    <string name="bluetooth_open">" 蓝牙：已打开"</string>
    <string name="setting">设置</string>
    <string name="bluetooth_name">" 设备："</string>
    <string name="battery">" 电量：空"</string>
    <string name="battery_value">" 电量："</string>
    <string name="rssi">" Rssi："</string>
    <string name="rssi_null">" Rssi：空"</string>
    <string name="open_door">打 开</string>
    <string name="close_door">关 闭</string>
    <string name="no_bt">" 设备：空"</string>
    <string name="title_activity_my_phone_card">MyPhoneCardActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_psd">请输入密码</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setPsd">设置密码</string>
    <string name="noPsd">无密码</string>
    <string name="changeName">修改名称</string>
    <string name="autoConnect">自动连接</string>
    <string name="title_activity_choose">Choose</string>
    <string name="title_activity_input">Input</string>
    <string name="numPsd">数字密码</string>
    <string name="title_activity_about_sl">AboutSLActivity</string>
    <string name="about_sl">\t\t连接蓝牙后，就可以轻松地管理您家里的门锁了。（妈妈再也不担心，我没带钥匙了！）</string>
    <string name="isAutoConnect">否</string>
    <string name="sure">确定</string>
    <string name="PSD_is_null">密码不能为空！</string>
    <string name="PSD_is_less_than_four">密码需要4位到16位之间</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="name_is_null">名称不能为空！</string>
    <string name="sure_psd">确认您现在的密码</string>
    <string name="psd_error">密码错误，请重试！</string>
    <string name="bt_disconnect">设备已断开</string>
    <string name="not_found">未找到上次连接设备</string>
    <string name="auto_connect_not_success">自动连接设备未成功</string>
    <string name="auto_success">已自动连接上次连接设备</string>
    <string name="tryReconnet">正在尝试重新连接</string>
    <string name="request_not_success">请求发送失败</string>
    <string name="bt_initialize_fail">蓝牙初始化失败</string>

</resources>
