<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black">

    <TextView
        android:id="@+id/animation"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle_shape" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/door"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bluetooth_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/name"
                android:gravity="center"
                android:text="@string/no_bt"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/batteryfull"
                android:gravity="center"
                android:text="@string/battery"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/rssi"
                android:gravity="center"
                android:text="@string/rssi"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/door"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circle_shape"
        android:gravity="center"
        android:text="@string/connect_bluetooth"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:paddingBottom="9dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="9dp"
            android:text="@string/disconnect"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/connect"
            android:background="@drawable/button_shape"
            android:paddingBottom="9dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="9dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
</RelativeLayout>
