<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context="com.chenls.smartlock.com.chenls.smarlock.setting.Input">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/setPsd"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:background="#00000000"
                    android:clickable="true"
                    android:onClick="titleImageButton"
                    android:src="@mipmap/ic_arrow_left" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:layout_marginBottom="10dp"
                android:background="@color/line_gray" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="140sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:inputType="numberPassword"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/line_gray" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_shape"
                    android:onClick="cancel"
                    android:paddingBottom="9dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="9dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/sure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_toRightOf="@id/cancel"
                    android:background="@drawable/button_shape"
                    android:onClick="sure"
                    android:paddingBottom="9dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="9dp"
                    android:text="@string/sure"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
